<resources>
    <string name="app_name">Museician</string>
    <string name="greeting_initial_instructions">Hallelujah! Hallelujah!</string>
    <string name="greeting_instructions">To begin, choose a song to jam with. You may also toggle with the other settings.</string>
    <string name="countdown_prompt">Countdown (seconds)</string>
    <string name="countdown_default">4</string>
    <string name="pending_jam">JAM!</string>
    <string name="start_jam_cta">Jam to:</string>
    <string name="choose_file_cta">Choose jam song</string>
    <string name="file_permission_msg">Please grant file access to
        Museician. Functionality might be limited otherwise.</string>
    <string name="jamming_msg">Now Playing:</string>
    <string name="recent_files">Recent Jams:</string>
    <string name="file_not_found">Can\'t play specified file.</string>

    <string name="shared_preferences_key">net.skytreader.museician
        .KVSTORE_KEY</string>
    <string name="kv_last_directory">K_LAST_DIRECTORY</string>
    <string name="kv_recent_files">K_RECENT_FILES</string>

    <string name="cd_back">Go back four seconds</string>
    <string name="cd_forward">Go forward four seconds</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_play">Play</string>
    <string name="cd_stop">Stop</string>
    <string name="default_noartist">Unknown Artist</string>
    <string name="default_notitle">Unknown Title</string>
</resources>
