<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <include layout="@layout/app_header" android:id="@+id/appHeader"></include>

    <TextView
        android:id="@+id/statusScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appHeader"
        android:textAlignment="center"
        android:textColor="@color/ledBlue"
        android:textSize="48sp"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:layout_below="@+id/statusScreen"/>

    <TextView
        android:id="@+id/nowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14sp"
        android:layout_below="@+id/seekBar"/>

    <RelativeLayout
        android:id="@+id/buttonBay"
        android:layout_below="@+id/nowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageButton
            android:contentDescription="@string/cd_back"
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/back"
            android:onClick="pressBack"/>

        <ImageButton
            android:contentDescription="@string/cd_stop"
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/stop"
            android:layout_toRightOf="@+id/backBtn"
            android:onClick="pressStop"/>

        <ImageButton
            android:contentDescription="@string/cd_play"
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/play"
            android:layout_toRightOf="@+id/stopBtn"
            android:onClick="pressPlay"/>

        <ImageButton
            android:contentDescription="@string/cd_pause"
            android:id="@+id/pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/pause"
            android:layout_toRightOf="@+id/playBtn"
            android:onClick="pressPause"/>

        <ImageButton
            android:contentDescription="@string/cd_forward"
            android:id="@+id/forwardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/forward"
            android:layout_toRightOf="@+id/pauseBtn"
            android:onClick="pressForward"/>

    </RelativeLayout>

    <Button
        android:id="@+id/chooseJamSong"
        android:hint="@string/choose_file_cta"
        android:layout_below="@+id/buttonBay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:onClick="chooseJamSong"/>
</RelativeLayout>
